# homesentinel

./: .gitignore  pyproject.toml  requirements.txt
config/: settings.json
core/: config.py  jsonutil.py  nmap_parse.py  schemas.py
plan/: first-plan.md  plan.md
sensor/: discover.py  scan.py
